# streamlit-label-kit

./: MANIFEST.in  README.md  pyproject.toml  setup.py
example/: demo.py
streamlit_label_kit/: __init__.py
streamlit_label_kit/LabelToolKit/: __init__.py  annotation.py  detection.py  segmentation.py
streamlit_label_kit/LabelToolKit/frontend/: package.json
streamlit_label_kit/LabelToolKit/frontend/src/: LabelToolKit.tsx  index.tsx
streamlit_label_kit/LabelToolKit/frontend/src/components/: index.tsx
streamlit_label_kit/LabelToolKit/frontend/src/components/BBox/: BBox.tsx  index.tsx
streamlit_label_kit/LabelToolKit/frontend/src/components/BBoxCanvas/: BBoxCanvas.tsx  index.tsx
streamlit_label_kit/LabelToolKit/frontend/src/components/BrushEditor/: BrushEditor.tsx  index.tsx
streamlit_label_kit/LabelToolKit/frontend/src/components/BrushSelector/: BrushSelector.tsx  index.tsx
streamlit_label_kit/LabelToolKit/frontend/src/components/ClassSelection/: ClassSelectorComponent.tsx  index.tsx
streamlit_label_kit/LabelToolKit/frontend/src/components/ClassSelection/ClassRadio/: ClassRadio.tsx  index.tsx
streamlit_label_kit/LabelToolKit/frontend/src/components/ClassSelection/ClassSelect/: ClassSelect.tsx  index.tsx
streamlit_label_kit/LabelToolKit/frontend/src/components/Description/: Description.tsx  index.tsx
streamlit_label_kit/LabelToolKit/frontend/src/components/InputSlider/: InputSlider.tsx  index.tsx
streamlit_label_kit/LabelToolKit/frontend/src/components/ItemInfo/: ItemInfo.tsx  index.tsx
streamlit_label_kit/LabelToolKit/frontend/src/components/ItemList/: ItemList.tsx  index.tsx
streamlit_label_kit/LabelToolKit/frontend/src/components/Mask/: Mask.tsx  index.tsx
streamlit_label_kit/LabelToolKit/frontend/src/components/MaskCanvas/: MaskCanvas.tsx  index.tsx
streamlit_label_kit/LabelToolKit/frontend/src/components/SegmentCanvas/: SegmentCanvas.tsx  index.tsx
streamlit_label_kit/LabelToolKit/frontend/src/components/Tag/: Tag.tsx  index.tsx
streamlit_label_kit/LabelToolKit/frontend/src/components/ValueDisplay/: ValueDisplay.tsx  index.tsx
streamlit_label_kit/LabelToolKit/frontend/src/label-tool/: Classification.tsx  Detection.tsx  Segmentation.tsx  index.tsx
streamlit_label_kit/LabelToolKit/frontend/src/utils/: BaseComponent.tsx  BaseItem.tsx  Mask.tsx  PythonArgs.tsx  Rectangle.tsx  index.tsx
